--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,10 @@
         android:theme="@style/AppTheme"
         android:name=".YoctuApplication">
 
-        <activity android:name=".ui.login.LoginActivity">
+        <activity
+            android:screenOrientation="portrait"
+            android:name=".ui.login.LoginActivity"
+            android:theme="@style/AppNoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
