--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,12 +25,15 @@ android {
 
         debug {
             signingConfig signingConfigs.release
+            versionNameSuffix '-DEBUG'
+            resValue("string","app_name","Yoctu_debug")
         }
 
         release {
             signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            resValue("string","app_name","Yoctu")
         }
     }
 }
