--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         <activity
             android:screenOrientation="portrait"
             android:name=".ui.login.LoginActivity"
-            android:theme="@style/AppNoActionBar">
+            android:theme="@style/AppNoActionBar"
+            android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,7 +29,8 @@
         <activity
             android:screenOrientation="portrait"
             android:name=".ui.notification.NotificationActivity"
-            android:theme="@style/AppNoActionBar" />
+            android:theme="@style/AppNoActionBar"
+            android:launchMode="singleInstance"/>
 
         <!-- Firebase -->
         <service android:name=".fcm.MyFirebaseMessagingService">
