--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,14 +27,14 @@ android {
         debug {
             signingConfig signingConfigs.release
             versionNameSuffix '-DEBUG'
-            resValue("string","app_name","Yoctu_debug")
+            resValue("string","app_name","FCM Yoctu_debug")
         }
 
         release {
             signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            resValue("string","app_name","Yoctu")
+            resValue("string","app_name","FCM Yoctu")
         }
     }
 }
