--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
             android:launchMode="singleInstance"/>
 
         <activity
-            android:name=".ui.add.AddTopicActivity"
+            android:name=".ui.add.AddTopicURLActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppNoActionBar"
             android:launchMode="singleInstance"/>
