--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ android {
         }
 
         release {
+            debuggable true
             signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
